Set default mode and override in game.properties

--- a/build.game.properties
+++ b/build.game.properties
@@ -22,6 +22,9 @@ package=${basedir}/src/com/gsn/games/mygame
 ## Game ID
 gameId=211
 
+## WindowMode, needs direct for Starling
+wmode=direct
+
 ## Optional flashVars (comma delimited)
 flashVars=mesmoGameId:${gameId},mesmoCheatsEnabled:"true",debuggingLevel:"0",cohort1:"something"
 
