Incorporate the JSFL version into the assetsManifest.xml

--- a/build.game.properties
+++ b/build.game.properties
@@ -35,7 +35,8 @@ bundlesSource=${basedir}/bundles-src/
 ## Delete the generated bundle FLA files on completion
 deleteBundleFLAs=true
 ## Name of bundling JSFL
-assetBundleJSFLFile=BundleAssets_v1.5.1.jsfl
+assetBundleJSFLVersion=1.5.3
+assetBundleJSFLFile=BundleAssets_v${assetBundleJSFLVersion}.jsfl
 
 
 ######## THEME SETTINGS ########
